Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1675

Values in Maemo device configuration not saved

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 2.1.0
    • Qt Creator 2.0.0
    • Remote Linux
    • None
    • Mac OS X 10.6, Qt 4.7/Cocoa
    • 1c095f88d05a22a7956645e002e78282cbe2576b

      When I type something in a field in the device configuration and press "ok", my value is lost. I have to leave the field first.
      (could be mac specific, e.g. not sent editingFinished signal or such?)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes